2003-01-29  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/rewrite.py: Pretty thorough overhaul:  
   	  - The hooks are now disabled by default, although they can be turned on 
	    by setting Configuration.rewriteEnableHooks to a true value.
	  - Yesterday's HostMatchBase stuff is gone; instead, added a
	    RewriteCond for doing scope-like things, and altered the rewrite
	    rule processing loop.  
	  - DynamicRewriter is no longer callable; it has a rewrite method,
	    and the rewrite loop doesn't do a type check, but looks for a
	    method by that name.  The method doesn't return anything; it is
	    passed the connection and does anything it wants to it.  Also, 
	    DynamicRewriters no longer get the  behavior of having
            match.groupdict() merged into CONNECTION.args.

2003-01-28  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Services/rewrite.py (ExtraPathFinder.__call__): jeez,
	this was called "call" rather than "__call__".  Obviously in much
	use. 
	(_HostMatchBase): added host-specific rewriters.

2003-01-22  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/argextract.py: fixing import error.

2003-01-21  Jacob Smullyan <smulloni@smullyan.org>

	* pylibs/formlib: many changes, back and forth, resulting
	in no detectable forward progress.

2003-01-13  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/Cache.py (_writeCompileCache): fixed typo.

2003-01-12  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyPgSQLcache.py: the pylibs used by the driver, below.

	* SkunkWeb/Services/pypgsqlcache.py: caching service for pypgsql
	driver.  This design is a pain in the neck.

	* pylibs/PyDO/pypgsqlconn.py: first draft of pypgsql PyDO driver,
	submitted by "John Pydo".

2003-01-11  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PostgreSql/__init__.py: whitespace normalization; removed
	some dead code.

2003-01-10  Jacob Smullyan <smulloni@smullyan.org>

	* pylibs/formlib/dispatcher.py (Goto, Push, Pop): added optional