@@ -1,8 +1,20 @@
-<html><head><TITLE>Demos</TITLE>
+<html>
+<head><TITLE>Demos</TITLE>
 <link REL="SHORTCUT ICON" HREF="../favicon.ico">
 </head>
-<body><p>Ok, right now we only have two.</p>
-<OL><LI>The <A HREF="geeknews">Geek News</a> page.</LI>
-<LI>The <A HREF="gallery">Image Gallery</A> page.</LI>
+<body>
+<h3>SkunkWeb Demos</h3>
+<p>Here are a couple of SkunkWeb demos which may or may not work
+      on your system.
+<OL><LI>The <A HREF="geeknews">Geek News</a> page. <i>(requires
+	  internet connectivity)</i></LI>
+<LI>The <A HREF="gallery">Image Gallery</A> page. <i>(requires that the 
+ <a href="http://www.pythonware.com/products/pil/">Python Imaging Library</a>  be
+ installed) </i> </LI>
 </OL>
 
+If you lack the prerequisites, what these demos will demonstrate is
+    SkunkWeb's notorious <strong>White Screen of Death</strong> and
+    its delightful traceback mechanism.</p>
+</body>
+</html>
