@@ -217,7 +217,6 @@ eval sysconfdir=$sysconfdir
 eval localstatedir=$localstatedir
 eval datadir=$datadir
 
-
 AC_CONFIG_SUBDIRS(SkunkWeb)
 
 AC_ADD_HELP([
@@ -227,16 +226,6 @@ Additional options if building SkunkWeb:
   --with-cache            Specify default cache location
   --with-docsdir          Specify documentation location
   --with-webdoc           Install some sample content
-  --with-services=svcs    Specify the list of services to install
-                          space delimited list of services to install, valid
-                          names are:
- 	                      ae_component aecgi auth basicauth fcgiprot httpd
-			      mysql oracle postgresql product remote 
-                              remote_client requestHandler rewrite scgi 
-                              sessionHandler templating userdir web 
-			  
-                          [default: install all services]
-
   --with-sudo=/path/sudo  Specify path to sudo
   --without-mod_skunkweb  Don't build mod_skunkweb
   --with-apxs=/path/apxs  Specify path to the apxs program
